@@ -249,12 +249,16 @@ class ControllerBase:
             if k.startswith('form.button.'):
                 buttons.append(k)
         if buttons:
-            # Clicking on an image button results in 3 button variables in REQUEST.form,
-            # namely form.button.button_name, form.button.button_name.x, and form.button.button_name.y
-            # If we see more than one key with the button prefix, grab the shortest one.
+            # Clicking on an image button results in 2 button variables in REQUEST.form
+            # (maybe 3),namely form.button.button_name.x, form.button.button_name.y, and
+            # possibly form.button.button_name (not for IE, though)
+            # If we see more than one key with the button prefix, try to handle sensibly.
             if len(buttons) > 1:
                 buttons.sort(lambda x, y: cmp(len(x), len(y)))
-            controller_state.setButton(buttons[0][len('form.button.'):])
+                if buttons[0].endswith('.x') or buttons[0].endswith('.y'):
+                    buttons[0] = buttons[0][:-2]
+            button = buttons[0][len('form.button.'):]
+            controller_state.setButton(button)
         return controller_state
 
 
