@@ -1,1 +1,1 @@
-1.0.4 alpha
+1.0.4 beta
