@@ -1,3 +1,7 @@
+2004-11-07  Geoff Davis <geoff@geoffdavis.net> (plonista)
+
+   * Fixed handling of image buttons
+	
 2004-10-17  Geoff Davis <geoff@geoffdavis.net> (plonista)
 
    * Added tutorial from the Plone Conference to /documentation
